@@ -1798,13 +1798,13 @@ include/gm/tri_ray.h svneol=native#text/plain
 include/gm/tri_tri.h svneol=native#text/plain
 include/icv.h svneol=native#text/plain
 include/libtermio.h svneol=native#text/plain
-include/light.h svneol=native#text/plain
 include/nmg.h svneol=native#text/plain
 include/obj.h svneol=native#text/plain
 include/optical.h svneol=native#text/plain
 include/optical/CMakeLists.txt svneol=native#text/plain
 include/optical/debug.h svneol=native#text/plain
 include/optical/defines.h svneol=native#text/plain
+include/optical/light.h svneol=native#text/plain
 include/optical/shadefuncs.h svneol=native#text/plain
 include/optical/shadework.h svneol=native#text/plain
 include/pc.h svneol=native#text/plain
