@@ -36,7 +36,7 @@
 #include "vmath.h"
 #include "raytrace.h"
 #include "optical.h"
-#include "light.h"
+#include "optical/light.h"
 #include "bn/plot3.h"
 
 
